Revert "[Android] added Glide library"
This reverts commit bd9fa6ec5430a1c6330e8d080ffdbd6c310abba4.

--- a/android/java/res/values/brave_colors.xml
+++ b/android/java/res/values/brave_colors.xml
@@ -51,8 +51,8 @@
     <color name="brave_rewards_theme_color">#392DD1</color>
 
     <!-- Brave news colors -->
-    <color name="card_background">#DC353535</color>
-    <!-- <color name="card_background">#35353578</color> -->
+    <!-- <color name="card_background">#DC353535</color> -->
+    <color name="card_background">#fff</color>
     <color name="card_background_solid">#353535</color>
     <color name="turn_on_button">#737ADE</color>
     <color name="news_text_color">@android:color/white</color>
