--- a/android/java/res/values/brave_colors.xml
+++ b/android/java/res/values/brave_colors.xml
@@ -52,7 +52,7 @@
 
     <!-- Brave news colors -->
     <!-- <color name="card_background">#DC353535</color> -->
-    <color name="card_background">#fff</color>
+    <color name="card_background">#E23B3E4F</color>
     <color name="card_background_solid">#353535</color>
     <color name="turn_on_button">#737ADE</color>
     <color name="news_text_color">@android:color/white</color>
